# python-cognito-auth

./: .env.example  .gitignore  .mcp.json  CLAUDE.md  Dockerfile  Makefile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
.claude/agents/: auth-security.md  aws-infra.md  observability.md  postgres-database.md  python-backend.md  redis-cache.md
.github/workflows/: ci.yml
alembic/: README  env.py
alembic/versions/: 2026-03-15_add_token_and_oauth_columns_to_users.py  2026-03-15_create_roles_and_users_tables.py  2026-03-26_drop_token_column_from_users.py  2026-04-14_add_profile_and_soft_delete_columns_to_users.py
context/product/: architecture.md  product-definition-lite.md  product-definition.md  roadmap.md
context/spec/001-project-scaffolding/: functional-spec.md  tasks.md  technical-considerations.md
context/spec/002-database-persistence/: functional-spec.md  tasks.md  technical-considerations.md
context/spec/003-auth-token-exchange/: functional-spec.md  tasks.md  technical-considerations.md
context/spec/004-redis-token-storage/: functional-spec.md  tasks.md  technical-considerations.md
context/spec/005-user-management-crud/: functional-spec.md  tasks.md  technical-considerations.md
src/app/: main.py
src/app/core/: config.py  database.py  dependencies.py  error_handlers.py  redis.py
src/app/models/: __init__.py  role.py  user.py
src/app/repositories/: user_repository.py
src/app/routers/: auth.py  health.py  users.py
src/app/schemas/: auth.py  health.py  user.py
src/app/services/: auth_service.py  cognito_service.py  token_service.py  user_service.py
tests/: test_auth.py  test_token_service.py  test_users.py
