[tool.poetry]
name = "python-auth"
version = "0.1.0"
description = "Python authentication microservice"
authors = []
packages = [{include = "app", from = "src"}]

[tool.poetry.dependencies]
python = ">=3.11,<4.0"
fastapi = "*"
uvicorn = {extras = ["standard"], version = "*"}
pydantic = "*"
pydantic-settings = "*"
sqlalchemy = {extras = ["asyncio"], version = "*"}
asyncpg = "*"
alembic = "*"
boto3 = "*"
python-jose = {extras = ["cryptography"], version = "*"}
structlog = "*"
greenlet = "^3.3.2"
httpx = "*"
redis = {extras = ["hiredis"], version = "*"}

[tool.poetry.group.dev.dependencies]
pytest = "*"
pytest-asyncio = "*"
ruff = "*"
mypy = "*"
taskipy = "*"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
target-version = "py311"
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = ["B008"]

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true
plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
module = ["app.core.config"]
disable_error_code = ["call-arg"]

[[tool.mypy.overrides]]
module = ["app.models.*", "src.app.models.*"]
disable_error_code = ["misc"]

[tool.taskipy.tasks]
dev = "uvicorn app.main:create_app --factory --host 0.0.0.0 --port 8000 --app-dir src --reload"
run = "uvicorn app.main:create_app --factory --host 0.0.0.0 --port 8000 --app-dir src"
test = "pytest"
lint = "ruff check src/"
lint-fix = "ruff check src/ --fix"
typecheck = "mypy src/"
check = "task lint && task typecheck && task test"
migrate = "PYTHONPATH=src alembic upgrade head"
migrate-down = "PYTHONPATH=src alembic downgrade -1"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
